--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>To Do List</title>
+    <title>Task2Do</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="css/favicon.ico">
   </head>
